DevOCL/src/objects/CLQ_OCLQS_Configuration_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Applicable_To__c</fullName>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Amendment - Center - Change of Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment - Change of Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment - Change of Capacity / Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment - FCC - Change of Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment - ODE - Change of Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - CC Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - FCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - ODE Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Rating Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration - Day Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration - In-Home Aide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration - Out of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Out of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Contact Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Day Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update FCC Resident Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Facility Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update In-Home Aide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update On-site Contact Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Out of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Outdoor Space Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Space Information</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for OCLQS Configuration Detail object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_OCLQS_Configuration__c</fullName>
        <label>OCLQS Configuration</label>
        <referenceTo>CLQ_OCLQS_Configuration__c</referenceTo>
        <relationshipLabel>OCLQS Configuration Details</relationshipLabel>
        <relationshipName>OCLQS_Configuration_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_Standard_Detail__c</fullName>
        <label>Standard Detail</label>
        <referenceTo>CLQ_Standard_Detail__c</referenceTo>
        <relationshipLabel>OCLQS Configuration Details</relationshipLabel>
        <relationshipName>OCLQS_Configuration_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>OCLQS Configuration Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLQ_OCLQS_Configuration__c</columns>
        <columns>CLQ_Applicable_To__c</columns>
        <columns>CLQ_Standard_Detail__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>OCLQS Configuration Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCLQS Configuration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>